Better updates system; fix nearly invisible font in placeholder

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
     --primary-text-color: rgb(244, 244, 244);
-    --secondary-text-color: rgba(244, 244, 244, 0.5);
+    --secondary-text-color: rgba(244, 244, 244, 0.8);
     --error-color: rgb(204, 49, 46);
     --border-color: var(--primary-text-color);
     --background-color: #BDBDBD;
